cmake_minimum_required(VERSION 2.7)

include_directories(zlib 7zip/CPP galib)

add_executable(pngwolf
pngwolf.cxx
galib/ga/GA1DArrayGenome.C
galib/ga/GAAllele.C
galib/ga/GABaseGA.C
galib/ga/gabincvt.C
galib/ga/GAGenome.C
galib/ga/GAIncGA.C
galib/ga/GAParameter.C
galib/ga/GAPopulation.C
galib/ga/garandom.C
galib/ga/gaerror.C
galib/ga/GAScaling.C
galib/ga/GASelector.C
galib/ga/GAStatistics.C
zlib/adler32.c
zlib/compress.c
zlib/crc32.c
zlib/deflate.c
zlib/gzclose.c
zlib/gzlib.c
zlib/gzread.c
zlib/gzwrite.c
zlib/infback.c
zlib/inffast.c
zlib/inflate.c
zlib/inftrees.c
zlib/trees.c
zlib/uncompr.c
zlib/zutil.c
7zip/CPP/7zip/Common/InBuffer.cpp
7zip/CPP/7zip/Common/OutBuffer.cpp
7zip/CPP/7zip/Common/StreamObjects.cpp
7zip/CPP/7zip/Common/StreamUtils.cpp
7zip/CPP/7zip/Compress/BitlDecoder.cpp
7zip/CPP/7zip/Compress/DeflateDecoder.cpp
7zip/CPP/7zip/Compress/DeflateEncoder.cpp
7zip/CPP/7zip/Compress/LzOutWindow.cpp
7zip/CPP/7zip/Compress/ZlibDecoder.cpp
7zip/CPP/7zip/Compress/ZlibEncoder.cpp
7zip/C/Alloc.c
7zip/C/HuffEnc.c
7zip/C/LzFind.c
7zip/C/Sort.c
)
